<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:ems="10"
        android:layout_marginStart="56dp"
        android:inputType="textPersonName"
        android:hint="@string/etNombre"
         />
    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/etFecha"
         />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/etTelefono"
       android:layout_below="@id/etFecha" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailSubject"
        android:hint="@string/etEmail"
        android:layout_below="@id/etTelefono" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textImeMultiLine"
        android:hint="@string/etDescripcion"
        android:layout_below="@id/etEmail"
        />

    <Button
        android:id="@+id/btnSiguiente"
        android:gravity="center_horizontal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_marginStart="156dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_Siguiente"
        android:layout_below="@+id/etDescripcion"
         />


</RelativeLayout>