<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosContacto">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etConfirmar"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16dp"
        android:textStyle="normal"
        android:paddingTop="20dp"
        android:layout_below="@id/tvConfirmar"
        />
    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etFecha"
        android:textSize="16dp"
        android:textStyle="normal"
        android:paddingTop="20dp"
        android:layout_below="@id/tvNombre"
        android:layout_marginLeft="@dimen/activity_margen_izquierdo"
        />
    <EditText
        android:id="@+id/etFecha1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toEndOf="@+id/tvFecha"
        android:layout_below="@id/tvNombre"
         />

        <TextView
        android:id="@+id/tvtel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etTelefono"
        android:textSize="16dp"
        android:textStyle="normal"
        android:paddingTop="20dp"
        android:textAlignment="textStart"
            android:layout_below="@id/tvFecha"
            android:layout_marginLeft="@dimen/activity_margen_izquierdo"/>
    <EditText
        android:id="@+id/etTelefono1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toEndOf="@+id/tvtel"
        android:layout_below="@id/tvFecha"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etEmail"
        android:textSize="16dp"
        android:textStyle="normal"
        android:paddingTop="20dp"
        android:layout_below="@id/tvtel"
        android:layout_marginLeft="@dimen/activity_margen_izquierdo"
        />
    <EditText
        android:id="@+id/etEmail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toEndOf="@+id/tvEmail"
        android:layout_below="@id/tvtel"
        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDescripcion"
        android:textSize="16dp"
        android:textStyle="normal"
        android:paddingTop="20dp"
        android:textAlignment="textStart"
        android:layout_below="@id/tvEmail"
        android:layout_marginLeft="@dimen/activity_margen_izquierdo"
        />
    <EditText
        android:id="@+id/etDescripcion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toEndOf="@+id/tvDescripcion"
        android:layout_below="@id/tvEmail"
        />
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:onClick="onClick"
        android:text="Editar Datos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@id/tvDescripcion"/>

</RelativeLayout>